# claude-code-book-template

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  backtest_run.py  docker-compose.yml  index.html  main.py  manifest.webmanifest  pyproject.toml  requirements.txt  run.sh  sw.js
.claude/: settings.json
app/: __init__.py  advisor.py  config.py  database.py  engine.py  indicators.py  main.py  market.py
config/: settings.yaml
data/: sample_jra.csv  sample_race.csv
docs/: DOCKER.md  PREDICT_TODAY.md  RESEARCH_JRAVAN.md  REVIEW_FIXES.md  SETUP_JRAVAN.md  SMARTMONEY_CAPTURE.md  ai-efficiency-strategy.md  research_findings.json  simulation.md  study-plan.md  workflows.md
fxsim/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  requirements.txt
horse_racing/: __init__.py  cli.py  data.py  jra.py  model.py
keiba/: README.md  __init__.py  __main__.py  backtest.py  betadvice.py  betting.py  blend.py  calibration.py  dashboard.py  enrich.py  exotic.py  exotic_odds.py  features.py  ingest.py  jvlink.py  leakage.py  model.py  pipeline.py  predict.py  reader.py  schema.py  segments.py  store.py  synth.py  web.py  win5.py
memory-gallery/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
scripts/: register_weekend_tasks.ps1  setup_windows.ps1  weekend_capture.ps1
src/: bot.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_data_cli.py  test_engine.py  test_indicators.py  test_jra.py  test_keiba_betadvice.py  test_keiba_betting.py  (+16 more)
(+138 files in other folders)
